--- a/etc/river.toml
+++ b/etc/river.toml
@@ -3,15 +3,12 @@
 my_addr = "127.0.0.1:3306"
 my_user = "root"
 my_pass = ""
-my_charset = "utf8"
+my_charset = "utf8mb4"
 
-# Set true when elasticsearch use https
-#es_https = false
-# Elasticsearch address
-es_addr = "127.0.0.1:9200"
-# Elasticsearch user and password, maybe set by shield, nginx, or x-pack
-es_user = ""
-es_pass = ""
+# meilisearch address
+meili_addr = "http://127.0.0.1:7700"
+# meilisearch api key
+meili_api_key = ""
 
 # Path to store data, like master.info, if not set or empty,
 # we must use this to support breakpoint resume syncing. 
@@ -35,12 +32,6 @@ mysqldump = "mysqldump"
 # if we have no privilege to use mysqldump with --master-data,
 # we must skip it.
 #skip_master_data = false
-
-# minimal items to be inserted in one bulk
-bulk_size = 128
-
-# force flush the pending requests if we don't have enough items >= bulk_size
-flush_bulk_time = "200ms"
 
 # Ignore table without primary key
 skip_no_pk_table = false
@@ -71,7 +62,6 @@ tables = ["t", "t_[0-9]{4}", "tfield", "tfilter"]
 schema = "test"
 table = "t"
 index = "test"
-type = "t"
 
 # Wildcard table rule, the wildcard table must be in source tables 
 # All tables which match the wildcard format will be synced to ES index `test` and type `t`.
@@ -80,7 +70,6 @@ type = "t"
 schema = "test"
 table = "t_[0-9]{4}"
 index = "test"
-type = "t"
 
 # Simple field rule 
 #
@@ -97,7 +86,6 @@ type = "t"
 schema = "test"
 table = "tfield"
 index = "test"
-type = "tfield"
 
 [rule.field]
 # Map column `id` to ES field `es_id`
@@ -123,7 +111,6 @@ keywords=",list"
 schema = "test"
 table = "tfilter"
 index = "test"
-type = "tfilter"
 
 # Only sync following columns
 filter = ["id", "name"]
@@ -143,7 +130,6 @@ filter = ["id", "name"]
 schema = "test"
 table = "tid_[0-9]{4}"
 index = "test"
-type = "t"
 # The es doc's id will be `id`:`tag`
 # It is useful for merge muliple table into one type while theses tables have same PK 
 id = ["id", "tag"]
