--- a/etc/river.toml
+++ b/etc/river.toml
@@ -33,6 +33,12 @@ mysqldump = "mysqldump"
 # we must skip it.
 #skip_master_data = false
 
+# minimal items to be inserted in one bulk
+bulk_size = 1024
+
+# force flush the pending requests if we don't have enough items >= bulk_size
+flush_bulk_time = "500ms"
+
 # Ignore table without primary key
 skip_no_pk_table = false
 
